# shuttle_actix_todo_list

./: Cargo.toml  schema.sql  schema_drop.sql
src/: main.rs
